# django-allauth

./: pyproject.toml
allauth/account/: apps.py
allauth/account/migrations/: 0001_initial.py  0002_email_max_length.py  0003_alter_emailaddress_create_unique_verified_email.py  0004_alter_emailaddress_drop_unique_email.py  0005_emailaddress_idx_upper_email.py  0006_emailaddress_lower.py  0007_emailaddress_idx_email.py  0008_emailaddress_unique_primary_email_fixup.py  0009_emailaddress_unique_primary_email.py
