[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=75.3.0", "setuptools-scm>=8"]

[project]
authors = [
  {name = "Raymond Penners", email = "raymond.penners@intenct.nl"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Environment :: Web Environment",
  "Topic :: Internet",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
]
dependencies = [
  "Django >= 4.2.16",
  "asgiref >= 3.8.1",
]
description = "Integrated set of Django applications addressing authentication, registration, account management as well as 3rd party (social) account authentication."
version = "65.14.1"
license = {text = "MIT"}
name = "django-allauth"
readme = "README.rst"
requires-python = ">= 3.8"

[project.optional-dependencies]
headless = [
  "pyjwt[crypto] >= 2.0,<3",
]
headless-spec = [
  "PyYAML >= 6,<7",
]
idp-oidc = [
  "oauthlib >= 3.3.0,<4",
  "pyjwt[crypto] >= 2.0,<3",
]
mfa = [
  "qrcode >= 7.0.0,<9",
  "fido2 >= 1.1.2,<3",
]
openid = [
  "python3-openid >= 3.0.8,<4",
]
saml = [
  "python3-saml>=1.15.0,<2.0.0",
]
socialaccount = [
  "oauthlib >= 3.3.0,<4",
  "requests >= 2.0.0,<3",
  "pyjwt[crypto] >= 2.0,<3",
]
steam = [
  "python3-openid >= 3.0.8,<4",
]

[project.urls]
Documentation = "https://docs.allauth.org/en/latest/"
Funding = "https://github.com/sponsors/pennersr"
Homepage = "https://allauth.org"
"Release notes" = "https://codeberg.org/allauth/django-allauth/src/branch/main/ChangeLog.rst"
Source = "https://codeberg.org/allauth/django-allauth"
Tracker = "https://codeberg.org/allauth/django-allauth/issues"

[tool.bandit]
exclude = ["test_*"]
exclude_dirs = ["tests", "allauth/conftest.py"]

[tool.isort]
combine_as_imports = true
combine_star = true
extra_standard_library = [
  "types",
  "requests",
]
include_trailing_comma = true
indent = 4
known_django = ["django"]
known_first_party = ["allauth"]
lines_after_imports = 2
multi_line_output = 3
profile = "black"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
disable_error_code = [
  "import-untyped",
  "import-not-found",
]
mypy_path = "."
plugins = [
  "mypy_django_plugin.main",
]
strict_optional = true

[tool.django-stubs]
django_settings_module = "tests.projects.regular.settings"

version = "0.1.0"
# [tool.setuptools.dynamic]
# version = {attr = "allauth.__version__"}

# [tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["allauth*"]

[tool.setuptools.package-data]
"*" = ["*.mo"]
